Format gallery and testimonial sections Formatted the gallery section to show evenly spaced images of 200px max width with description underneath with text aligned to center. Formatted the customer testimonial quote section with proper font size and weight. Fixed background color of both sections to white.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #F9FAF8;
     background-color: #1F2937;
-    padding: 10px 200px;
     margin: 0;
     min-height: 100vh;
 }
@@ -13,7 +12,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 16px;
+    margin-bottom: 48px;
+    padding: 10px 200px;
 }
 
 .subtxt{
@@ -38,7 +38,8 @@ li {
 .contenta {
     flex: 1;
     display: flex;
-    padding: 16px;
+    margin-bottom: 48px;
+    padding: 10px 200px;
 }
 
 .heroic {
@@ -70,6 +71,7 @@ button {
     border-radius: 0.375rem;
     border: none;
     outline-color: #E5E7EB;
+    outline-width: 5px;
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -86,14 +88,73 @@ button {
 
 .contentb {
     flex: 1;
+    background-color: #E5E7EB;
     display: flex;
-    padding: 16px;
+    padding: 10px 200px;
+    text-align: center;
+}
+
+.randominfo {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.infoheader {
+    color: #1F2937;
+    font-size: 36px;
+    weight: 900;
+}
+
+.gallery {
+    display: flex;
+    justify-content: center;
+    gap: 52px;
+    margin-top: 32px;
+}
+
+.info {
+    max-width: 200px;
+}
+
+img {
+    border-radius: 0.375rem;
+    border-color: #3882F6;
+}
+
+.text {
+    color: #1F2937;
 }
 
 .contentc {
+    background-color: #E5E7EB;
     flex: 1;
     display: flex;
-    padding: 16px;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 200px;
+}
+
+.quotes {
+    display: flex;
+    flex-direction: column;
+}
+
+.quotetxt {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+}
+
+.quotename {
+    color: #1F2937;
+    font-size: 24px;
+    font-weight: 900;
+    font-style: bold;
+    align-self: flex-end;
 }
 
 .contentd {
@@ -102,7 +163,8 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 16px;
+    margin-bottom: 48px;
+    padding: 10px 200px;
 }
 
 .call {
@@ -112,8 +174,11 @@ button {
     justify-content: center;
     align-items: center;
     padding: 48px 96px;
+}
 
-
+.signup {
+    border-color:#E5E7EB;
+    border-width: 2px;
 }
 
 .footer {
